# parsek

./: AUTHORS  CMakeLists.txt  ChangeLog  OVERVIEW  README  TODO
cmake/: FindTPProto.cmake
src/: CMakeLists.txt  connecttoserverdialog.cpp  connecttoserverdialog.h  connecttoserverdialog.ui  converters.cpp  converters.h  editserversdialog.ui  importobject.cpp  importobject.h  loggerwidget.cpp  loggerwidget.h  loggerwidget.ui  mainwindow.cpp  mainwindow.h  mapobjects.cpp  mapobjects.h  mapscene.cpp  mapscene.h  mapview.cpp  mapview.h  messagesmodel.cpp  messagesmodel.h  objectinfowidget.ui  objectsitem.cpp  objectsitem.h  objectsmodel.cpp  objectsmodel.h  parsek.cpp  parsek.desktop  version.h
